# todo-in-actix

back_end/: .env  Cargo.toml
back_end/src/: main.rs
back_end/src/api/: todo_api.rs
back_end/src/models/: todo_model.rs
back_end/src/repository/: mongodb_repo.rs
front_end/: package-lock.json  package.json
front_end/actions/todos/: todos.ts
front_end/app/: layout.tsx  page.tsx  todo.tsx
front_end/lib/: data.ts
front_end/utils/hooks/mutate-hooks/: use-create-todo.ts  use-delete-todo.ts
front_end/utils/hooks/query-hooks/: use-get-todos.ts
