[package]
name = "back_end"
version = "0.1.0"
edition = "2021"

[dependencies]

# Actix Web and async dependencies
actix-web = "4"
futures = "0.3"
# Serialization dependencies
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
mongodb = "3.2.0"
tokio = { version = "1", features = ["full"] } 
actix-cors = "0.7.0"
serde_json = "1.0.138"
